2010-03-19  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=36380
        websocket/tests/frame-lengths.html times out on Tiger bot

        https://bugs.webkit.org/show_bug.cgi?id=35041
        websocket/tests/frame-lengths.html / websocket/tests/simple-stress.html fail on Windows bot

        Double the timeout (from 15 seconds to 30 seconds). We can increase it more, if necessary -
        sampling the DRT process on Mac OS X takes much longer anyway, so it's better to avoid
        timing out than to detect it early.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setWaitToDump):
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::waitUntilDone):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        * Scripts/run-webkit-tests:

2010-03-19  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed.

        Buildfix for Qt v4.5.

        * QtLauncher/main.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::applyZoom):

2010-03-19  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Operational tweaks to SheriffBot
        https://bugs.webkit.org/show_bug.cgi?id=36385

        These changes aren't pretty, but they're helpful to make SheriffBot
        work operationally.  I plan to iterate in these areas, but I wanted to
        get this patch landed so I could be running the bot against TOT.

        * Scripts/webkitpy/commands/sheriffbot.py:
        * Scripts/webkitpy/irc/ircbot.py:
        * Scripts/webkitpy/thirdparty/autoinstalled/__init__.py:

2010-03-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Help sheriff-bot avoid warning about flaky tests (and add more unit testing)
        https://bugs.webkit.org/show_bug.cgi?id=36354

        * Scripts/webkitpy/buildbot.py: